[presentation] Add links to exercises' solution in conclusion

--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -1520,6 +1520,25 @@ sbt "run-main psug.hands.on.exercise08.DisplayResult"
   \normalsize
 \end{frame}
 
+\begin{frame}[fragile]
+  \frametitle{Solutions}
+
+  \begin{block}{In your repository}
+
+    \begin{lstlisting}[language=bash, style=terminal]
+git checkout teacher
+git pull
+ls src/main/scala/psug/hands/on/solutions 
+    \end{lstlisting}
+  
+  \end{block}
+
+  \begin{block}{On Github}
+    https://github.com/vincentdoba/spark-hands-on/tree/teacher/src/main/scala/psug/hands/on/solutions
+  \end{block}
+
+\end{frame}
+
 \begin{frame}
 
   \frametitle{That's All Folks !}
